Fixed scrollbar / remove submitbutton

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -5,7 +5,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	display: none; /* Hidden by default */
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
+	padding-top: 50px; /* Location of the box */
 	left: 0;
 	top: 0;
 	width: 100%; /* Full width */
@@ -22,6 +22,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	padding: 20px;
 	border: 1px solid #888;
 	width: 80%;
+	height: 80%;
+	overflow-y: scroll;
 	}
 
 	/* The Close Button */
